log/build_2026-04-20_19-29-23/hospital_vision/stderr.log
  File "/home/hospital/hospital_ws/install/hospital_vision/lib/python3.10/site-packages/hospital_vision/d435_node1.py", line 1
    jimport rclpy
            ^^^^^
SyntaxError: invalid syntax

